# TTS

./: .gitignore  VIDEO_TTS_USAGE.md  app.py  config.yaml.example  process_worker.py  pyproject.toml  requirements-uv.txt  server.sh  upload_worker.py  video_tts.py  worker.sh
TTS/tts/utils/text/phonemizers/: __init__.py
services/: __init__.py  logger.py  queue_manager.py  r2_uploader.py  voice_processor.py
