[build-system]
requires = [
    "setuptools",
    "wheel",
    "cython~=0.29.30",
    "numpy>=1.24.3",
    "packaging",
]

[project]
name = "TTS"
version = "0.22.0"
description = "Deep learning for Text to Speech by Coqui."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "MPL-2.0"}
authors = [
    {name = "Eren Gölge", email = "egolge@coqui.ai"}
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.3",  # Python 3.11 使用 >= 1.24.3
    "cython>=0.29.30",
    "scipy>=1.11.2",
    "torch>=2.1",
    "torchaudio",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "scikit-learn>=1.3.0",
    "numba>=0.57.0",  # Python 3.11 使用 >= 0.57.0
    "inflect>=5.6.0",
    "tqdm>=4.64.1",
    "anyascii>=0.3.0",
    "pyyaml>=6.0",
    "fsspec>=2023.6.0",
    "aiohttp>=3.8.1",
    "packaging>=23.1",
    "mutagen==1.47.0",
    "flask>=2.0.1",
    "pysbd>=0.3.4",
    "umap-learn>=0.5.1",
    "pandas>=1.4,<2.0",
    "matplotlib>=3.7.0",
    "trainer>=0.0.36",
    "coqpit>=0.0.16",
    "jieba",
    "pypinyin",
    "hangul_romanize",
    "gruut[de,es,fr]==2.2.3",
    "jamo",
    "nltk",
    "g2pkk>=0.1.1",
    "einops>=0.6.0",
    "transformers>=4.33.0,<4.34.0",
    "encodec>=0.1.1",
    "unidecode>=1.3.2",
    "num2words",
    "spacy[ja]>=3",
    # API 服务依赖
    "PyJWT>=2.8.0",
    "redis>=5.0.0",
    "boto3>=1.28.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "isort",
    "nose2",
    "pylint==2.10.2",
]
notebooks = [
    "bokeh==1.4.0",
]
ja = [
    "mecab-python3==1.0.6",
    "unidic-lite==1.0.8",
    "cutlet",
]
bn = [
    "bangla",
    "bnnumerizer",
    "bnunicodenormalizer",
]
all = [
    "black",
    "coverage",
    "isort",
    "nose2",
    "pylint==2.10.2",
    "bokeh==1.4.0",
    # 注意: 日语依赖 (mecab-python3, unidic-lite, cutlet) 需要系统安装 MeCab
    # 这些依赖在某些系统上可能有兼容性问题，因此从 'all' 中移除
    # 如果需要日语支持，请单独安装: uv sync --extra ja
]

[project.urls]
Documentation = "https://github.com/coqui-ai/TTS/wiki"
Tracker = "https://github.com/coqui-ai/TTS/issues"
Repository = "https://github.com/coqui-ai/TTS"
Discussions = "https://github.com/coqui-ai/TTS/discussions"

[project.scripts]
tts = "TTS.bin.synthesize:main"
tts-server = "TTS.server.server:main"

[flake8]
max-line-length=120

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3
